--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               
                     <div class = "Data-Science">
                       <p class ="Features-paragraph">
-                         💥 Currently I am studying B.TECH. IInd Year in Computer Science and Engineering DataScience</p>
+                         💥 I am a dedicated 3rd year student pursuing a BTech degree in Computer Science with a specialization in Data Science at G. Narayanamma institute of technology and sciences, with an anticipated graduate date in 2025.</p>
                     </div>
                 </div>
               </div>
@@ -103,11 +103,10 @@
                   </ul>
                   <div class = "Data-Analytic">
                     <p class ="Features-paragraph">
-                       💥 Building Fully responsive website front end using HTML, CSS, Bootstrap and Javascript.</p>
-                    <p  class ="Features-paragraph">
-                       💥  Right now i only did frontend but i am also doing backend.</p>
+                       💥 I specialize in crafting fully responsive front-end web solutions using a combination of HTML, CSS, Bootstrap, and JavaScript. My expertise lies in creating user-friendly and visually appealing interfaces that seamlessly adapt to various devices and screen sizes, ensuring a top-notch user experience.</p>
+                    
                       <p  class ="Features-paragraph">
-                       💥 I have also used Abode Photoshop, Illustrator Figma to design User interface of websites and mobile application and design of logos.</p>
+                       💥 In addition to my front-end skills, I am actively expanding my knowledge in back-end development, striving for a well-rounded proficiency in full-stack web development.</p>
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
@@ -128,8 +127,8 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 I have knowledge of Data Structure like Hash Tables, Trees, Tries, Graphs, and various algorithms for solving various problems efficiently.</p>
-                      <p  class ="Features-paragraph">
+                         💥 I possess a strong understanding of fundamental data structures such as Hash Tables, Trees, Tries, and Graphs, complemented by a proficiency in various algorithms designed for efficient problem-solving. Recognizing that Data Structures and Algorithms serve as the foundation of programming, I have a deep passion for tackling complex challenges.</p>
+                      <p class ="Features-paragraph">
                          💥 As I know Data Structure and Algorithms are the heart of programming, So I loves to solve programming question in different competitive website like codeforce,codechef,hackerrank and many more.</p>
                         </div>
                   </div>
