--- a/Education.html
+++ b/Education.html
@@ -56,7 +56,7 @@
                 </ul>
         </nav>
     </header>
-    <section id=Section1>
+  <!--  <section id=Section1>
         <div class="row">
             <div class="col-lg-6 col-md">
                 <img class="Programming" src="eng.jpg" alt="">
@@ -70,7 +70,7 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
     <section>
         <div class="container">
             <div class="Heading">
