--- a/Education.html
+++ b/Education.html
@@ -90,13 +90,13 @@
                             <div class="timeline-box">
                                 <div class="box-title">
                                     <i class="fas fa-graduation-cap" aria-hidden="true"></i>G. Narayanamma institute of technology and sciences
-                                    <p class="degree">B.tech. in Computer  Engineering in Data Science</p>
+                                    <p class="degree">B.tech. in Computer Science Engineering specialization under Data Science</p>
                                 </div>
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://www.gnits.ac.in/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 I am studying B.TECH 2ND year. I had completed learning c, c++, python, Data Structures and Algorithms</div>
-                                    <div class="box-item"><b>💥 CGPA for 2 semesters</b>: 8.5/10 </div>
+                                    <div class="box-item">💥 I am currently in 3rd year of BTech.</div>
+                                    <div class="box-item"><b>💥 CGPA for 4 semesters</b>: 8.47/10 </div>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
             </div>
         </div>
     </section>
-    <section id=section3>
+    <!--<section id=section3>
         <div class="Heading">
             <h1>Certifications</h1>
         </div>
@@ -153,7 +153,7 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section>-->
     <footer class=footer>Made with ❤️ by V. Keerthika</footer>
 </body>
 
