--- a/Education.html
+++ b/Education.html
@@ -95,8 +95,8 @@
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://www.gnits.ac.in/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 I am currently in 3rd year of BTech.</div>
-                                    <div class="box-item"><b>💥 CGPA for 4 semesters</b>: 8.47/10 </div>
+                                    <div class="box-item">💥 I am currently in 4th year of BTech.</div>
+                                    <div class="box-item"><b>💥 CGPA for 6 semesters</b>: 8.43/10 </div>
                                 </div>
                             </div>
                         </div>
