--- a/Project.html
+++ b/Project.html
@@ -53,8 +53,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 project-heading">
                           <h1 class = "P-heading">Projects</h1>
-                          <p class="p-text">My approach to Project uses various technology to make the model more accurate and stable. As of
-                            Now I didn't do any project but I will do projects.
+                          <p class="p-text">My approach to Project uses various technology to make the model more accurate and stable. 
                           </p>
 
                         </div>
@@ -64,10 +63,9 @@
                         <a class="Project-box" target="#" >
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Project 1</h5>
-                            <p class="card-text project-text">My first project will be displayed here when it was finished
+                            <h5 class="card-title">Fit Fusion</h5>
+                            <p class="card-text project-text"> It is a simple and static website built using Bootstrap, which contains all the information about the excercises.
                             </p>
-
                           </div>
                         </div>
                         </a>
@@ -76,13 +74,35 @@
                         <a  class="Project-box" target="_blank" >
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Project 2</h5>
-                            <p class="card-text project-text">My second project will be displayed here when it is done</p>
+                            <h5 class="card-title">Personal portfolio</h5>
+                            <p class="card-text project-text">Olaa! You are viewing this project. This is done using HTML & CSS.</p>
                           </div>
                         </div>
                       </a>
                       </div>
                     </div>
+                    <div class="col-sm-6">
+                        <a class="Project-box" target="#" >
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Stock search</h5>
+                            <p class="card-text project-text"> It allows users to search for real-time stock information using Angular, NodeJS, Typescript, Bootstrap.
+                            </p>
+                          </div>
+                        </div>
+                        </a>
+                      </div>
+                    <div class="col-sm-6">
+                        <a class="Project-box" target="#" >
+                        <div class="card boxx">
+                          <div class="card-body">
+                            <h5 class="card-title">Prediction of Genomic Disorders</h5>
+                            <p class="card-text project-text"> Developed a Machine Learning model to predict genetic disorders.
+                            </p>
+                          </div>
+                        </div>
+                        </a>
+                      </div>
                 </section>
 
                 <footer class=footer>Made with ❤️ by V. Keerthika</footer>
