--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <a class="nav-link headerachor" href="skill.html">Skills</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link headerachor" href="Project.html">Projects</a>
+                      <a class="nav-link headerachor" href="project.html">Projects</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link headerachor" href="contact.html">Contact Me</a>
